--- a/css/demo.css
+++ b/css/demo.css
@@ -1,4 +1,4 @@
-@import url(https://www.google.com/fonts/specimen/Open+Sans:400,500,700);
+@import url(https://www.google.com/fonts#UsePlace:use/Collection:Source+Sans+Pro:400,700,600);
 
 /*@font-face {
     font-weight: normal;
@@ -72,7 +72,7 @@ a {
 .control-panal {
     float: right;
     display: block;
-    background-color: #5875ac;
+    background-color: #357ec1;
     width: 200px;
     height: 500px;
     padding: 10px;
